# SampaSRS

./: .clang-format  .clang-tidy  .gitignore  2D_clustering.cpp  AcqConfig.conf  CMakeLists.txt  CMakeLists_BASE_11428.txt  README.md  check_raw.cpp  clustering.cpp  clusters.cpp  common_mode.cpp  conf_cosmics2D.txt  config.txt  config_pedestal.txt  create_pedestal.cpp  event_sorter.cpp  fake_packets.cpp  generate_pedestal.cpp  new_clustering.cpp  old_clustering.cpp  read_tree.cxx  read_tree_cxx_ACLiC_dict_rdict.pcm  replay.cpp  sampa_acquisition.cpp  sampa_aquisition.cpp  sampa_control.cpp  sampa_decoder.cpp  sampa_gui.cpp  sampasrs.h  zero_suppression_clustering.cpp  zs_clustering.cpp
cmake/: Deps.cmake
include/sampasrs/: LinkDef.h  acquisition.hpp  aquisition.h  aquisition.hpp  cluster.hpp  clusters.hpp  decoder.hpp  mapping.hpp  root_fix.hpp  sampasrs.h  slow_control.h  slow_control.hpp  utils.hpp  vector.h
mapping_files/: Mapping_10x12pads.txt  Mapping_strips.txt  Mapping_strips_2D.txt
root_examples/: plot_img_spec.cxx  plot_wave.cxx  read_tree.cxx  read_tree_cxx_ACLiC_dict_rdict.pcm  view_bx_count.cxx
scripts/: thissampa.sh
